# atomic-server

./: .dockerignore  .earthlyignore  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Earthfile  LICENSE  README.md  _config.yml  default.env  default_mapping.amp  default_store.ad3  docker-compose.yml  dockerfile  fly.toml  foo.json  init.sh  pull_request_template.md  release-please-config.json  restart.sh  serve.sh  server.sh  start-admin.sh  start.sh  tree.txt  user_mapping.amp  user_store.ad3
.cargo/: config.toml
.codesandbox/: tasks.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: deploy_production.yml  deploy_staging.yml  deployment.yml  docker.yml  main.yml  release-crates.yml  release-github.yml  release.yml  release_please.yml  release_plz.yml  rust.yml  tauri-publish.yml
atomizer/: Cargo.toml
atomizer/src/: file.rs  image.rs  lib.rs  pdf.rs
bindings/rust-plugin/: Cargo.toml
bindings/rust-plugin/src/: export.rs  lib.rs  types.rs
bindings/rust-wasmer-runtime/: bindings.rs  types.rs
bindings/ts-runtime/: index.ts  types.ts
browser/: .earthlyignore  .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING.md  DOCS.MD  Earthfile  LICENSE  README.md  build_server.sh  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pull_request_template.md  run-all.sh  tsconfig.build.json  tsconfig.json  typedoc.json  vitest.workspace.js
browser/cli/: package.json  readme.md  tsconfig.json
browser/e2e/: README.md  (+3 more)
cli/: .gitignore  Cargo.toml  README.md  q!  wapm.toml
cli/src/: commit.rs  delta.rs  main.rs  new.rs  path.rs  print.rs  search.rs
cli/tests/: tests.rs
defaults/: default_mapping.amp  default_store.ad3
desktop/: Cargo.toml  README.md  latest-version.json  rustfmt.toml  tauri.conf.json
desktop/icons/: 128x128.png.license
desktop/src/: main.rs  menu.rs  system_tray.rs
docs/: .gitignore  .prettierrc.json  LICENSE  README.md  book.toml  discord.js  open-in.css
lib/: CHANGELOG.md  Cargo.toml  README.md
lib/.tmp/db/: db
lib/benches/: 2022-02-18.md  benchmarks.rs
lib/bindings/rust-plugin/: Cargo.toml
lib/bindings/rust-plugin/src/: export.rs  import.rs
lib/bindings/rust-wasmer-runtime/: bindings.rs  types.rs
lib/defaults/: chatroom.json  default_base_models.json  default_mapping.amp  default_store.ad3  default_store.json  default_store.jsonld  demo_resources.json  ontologies.json  table.json
lib/examples/: async_std_consumer.rs  basic.rs  compare_ring.rs  iai_cpu_benchmark.rs  signing.rs
lib/src/: agents.rs  atom.rs  atomic_url.rs  atoms.rs  authentication.rs  client.rs  collections.rs  commit.rs  config.rs  datatype.rs  datetime_helpers.rs  db.rs  delta.rs  email.rs  endpoints.rs  errors.rs  fetcher.rs  hierarchy.rs  js.rs  lib.rs  mapping.rs  mutations.rs  parse.rs  plugin.rs  populate.rs  query.rs  resources.rs  schema.rs  serialize.rs  store.rs  store_native.rs  storelike.rs  test_utils.rs  token.rs  url_helpers.rs  urls.rs  utils.rs  validate.rs  values.rs  versioning.rs
lib/src/client/: helpers.rs  mod.rs  search.rs
lib/src/db/: collections_index.rs  migrations.rs  prop_val_sub_index.rs  query_index.rs  test.rs  trees.rs  val_prop_sub_index.rs
lib/src/endpoints/: files.rs  invite.rs  mod.rs  wasm_demo.rs
lib/src/js/: callback_demo.js
lib/src/plugins/: add_pubkey.rs  bindings.rs  bindings_generator.rs  bookmark.rs  chatroom.rs  export.rs  files.rs  handlers.rs  host.rs  importer.rs  invite.rs  mod.rs  path.rs  plugin.rs  prunetests.rs  query.rs  register.rs  reset_pubkey.rs  search.rs  utils.rs  versioning.rs  wasm_demo.rs
lib/src/plugins/generated_runtime/: bindings.rs  mod.rs  types.rs
lib/test_files/: local_id.json
lib/tests/: store.rs
plugin-example/: Cargo.toml  README.md  plugin_example.wasm
plugin-example/src/: lib.rs
scripts/: start_docker_local.sh
server/: .gitignore  Cargo.toml  README.md  STATUS.md  benchmark.yml  build.rs  default.env  example_requests.http  openapi.yml  rdf-search.md
server/app_assets/: _config.yml  browserconfig.xml  index.html  manifest.webmanifest  site.webmanifest  sw.js  sw.js.map  workbox-7efc0276.js  workbox-7efc0276.js.map  workbox-b77c083a.js  workbox-b77c083a.js.map
server/app_assets/assets/: index.js  index2.css  index2.js  index2.js.map
server/e2e_tests/: README.md  e2e-generated.spec.ts  e2e.spec.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  test-config.ts
server/src/: actor_messages.rs  appstate.rs  bin.rs  cli.rs  commit_monitor.rs  config.rs  content_types.rs  ddns.rs  errors.rs  files.rs  helpers.rs  https.rs  https_init.rs  jsonerrors.rs  lib.rs  log.rs  main.rs  process.rs  render_atom.rs  routes.rs  search.rs  serve.rs  tests.rs  timer.rs  trace.rs  tray_icon.rs
server/src/handlers/: commit.rs  download.rs  export.rs  get_resource.rs  home.rs  mod.rs  path.rs  post_resource.rs  resource.rs  search.rs  single_page_app.rs  tpf.rs  upload.rs  validate.rs  web_sockets.rs  ws.rs
server/src/render/: atom.rs  mod.rs  propvals.rs
server/src/templates/: 404.html  base.html  home.html  macros.html  path.html  resource.html  tpf.html
server/src/templates/datatypes/: atomicURL.html
server/src/ts/: init.ts
server/src/views/: class.rs  collection.rs  mod.rs  resource.rs
server/static/: atomic-data-browser.html  atomic-react.html  index.html  styles.css  tauri-splashscreen.html
server/static/well-known/: README.txt
server/templates/: 404.html  atomic-data-browser.html  base.html  class.html  collection.html  home.html  macros.html  path.html  resource.html  tpf.html  validate.html
server/tests/: cli.rs  server-cli.rs
src/: errors.rs  lib.rs  main.rs  mapping.rs  serialization.rs  serialize.rs  store.rs  urls.rs
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs  system_tray.rs
vihreat/: .gitignore  generate.py  init.sh
vihreat-data/: generate-types.sh  generate.py  init.sh  with-atomic-server-in-background.sh
(+1003 files in other folders)
