[package]
name = "atomic-cli"
version = "0.1.0"
authors = ["Joep Meindertsma <joep@argu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
promptly = "0.3.0"
serde_json = "1.0.56"
serde = "1.0.114"
uuid = {version = "0.8.1", features = ["v4"]}
regex = "1.3.9"
