[package]
name = "atomic"
description = "Create, share and standardize linked atomic data!"
version = "0.4.2"
authors = ["Joep Meindertsma <joep@ontola.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/joepio/atomic-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
promptly = "0.3.0"
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
uuid = {version = "0.8.1", features = ["v4"]}
regex = "1.3.9"
clap = "2.33.1"
colored = "1.9.3"
dirs = "3.0.1"
tokio = "0.2.22"
dotenv = "0.15.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
tera = "1.4.0"
