[package]
description = "Turn files into Atomic Data."
edition = "2021"
name = "atomizer"
version = "0.1.0"

[dependencies]
atomic_lib = {version = "0.34.0", path = "../lib"}
kamadak-exif = "0.5.5"
# Should match the version of pdf-extract
mime_guess = "2.0.4"
pdf-extract = {path = "../../../joepio/pdf-extract"}
