[package]
name = "atomic-cli"
version = "0.20.0"
authors = ["Joep Meindertsma <joep@argu.co>"]
edition = "2018"
license = "MIT"
description = "CLI tool to create, store, query, validate and convert Atomic Data"
readme = "README.md"
repository = "https://github.com/joepio/atomic"

[dependencies]
atomic_lib = { version = "0.20.0", path = "../lib", features = ["config", "db", "rdf"] }
clap = "2.33.3"
colored = "2.0.0"
dirs = "3.0.1"
edit = "0.1.2"
promptly = "0.3.0"
regex = "1.4.2"
