[package]
authors = ["Joep Meindertsma <joep@argu.co>"]
description = "CLI tool to create, store, query, validate and convert Atomic Data"
edition = "2018"
license = "MIT"
name = "atomic-cli"
readme = "README.md"
repository = "https://github.com/joepio/atomic-data-rust"
version = "0.25.1"

[dependencies]
atomic_lib = {version = "0.25.1", path = "../lib", features = ["config", "db", "rdf"]}
clap = "2.33.3"
colored = "2.0.0"
dirs = "3.0.1"
edit = {version = "0.1.2", optional = true}
promptly = "0.3.0"
regex = "1.4.2"

[dev-dependencies]
assert_cmd = "1.0.2"

[features]
default = ["native"]
# Non-wasi interface. These features cannot be compiled to WASI.
native = ["edit"]
