[package]
authors = ["joep@ontola.io"]
build = "src/build.rs"
description = "Atomic Server - Tauri desktop"
edition = "2021"
license = "MIT"
name = "atomic-server-tauri"
repository = "https://github.com/joepio/atomic-data-rust"
version = "0.32.0"

[build-dependencies]
[build-dependencies.tauri-build]
features = []
version = "1.0.0-rc.5"

[dependencies]
actix-rt = "2.6.0"
serde_json = "1.0"

[dependencies.atomic-server]
# We don't need HTTPS for desktop usage
default-features = false
path = "../server"
version = "0.32.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tauri]
features = ["api-all", "system-tray", "updater"]
version = "1.0.0-rc.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
