[package]
authors = ["joep@ontola.io"]
build = "src/build.rs"
description = "Atomic Server - Tauri desktop"
edition = "2021"
license = "MIT"
name = "atomic-server-tauri"
repository = "https://github.com/atomicdata-dev/atomic-data-rust"
version = "0.34.2"

[build-dependencies]
[build-dependencies.tauri-build]
features = []
version = "1"

[dependencies]
actix-rt = "2.6.0"
serde_json = "1.0"

[dependencies.atomic-server]
# We don't need HTTPS for desktop usage
default-features = false
path = "../server"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tauri]
features = ["api-all", "system-tray", "updater"]
version = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
