[package]
authors = ["Joep Meindertsma <joep@argu.co>"]
description = "Library for creating, storing, querying, validating and converting Atomic Data."
edition = "2021"
license = "MIT"
name = "atomic_lib"
readme = "README.md"
repository = "https://github.com/atomicdata-dev/atomic-data-rust"
version = "0.34.3"

# Enables benchmarks to use the features, such as Db
[[bench]]
all-features = true
harness = false
name = "benchmarks"
# path = "benches/benchmarks.rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
base64 = "0.21"
bincode = {version = "1", optional = true}
directories = {version = ">= 2, < 5", optional = true}
html2md = {version = "0.2.13", optional = true}
kuchiki = {version = "0.8.1", optional = true}
lazy_static = "1"
lol_html = {version = "0.3.1", optional = true}
rand = {version = "0.8"}
regex = "1"
ring = "0.16.19"
rio_api = {version = "0.8", optional = true}
rio_turtle = {version = "0.8", optional = true}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sled = {version = "0.34", optional = true, features = ["no_logs"]}
toml = {version = "0.7", optional = true}
tracing = "0.1"
ureq = "2"
url = "2"
urlencoding = "2"
mail-send = {version= "0.2", optional = true}
async-mutex = {version = "1.4.0", optional = true}
tokio = {version = "1.22.0", optional = true, features = ["full"] }
jwt-simple = {version = "0.11.2", optional = true}

[dev-dependencies]
criterion = "0.4"
iai = "0.1"
lazy_static = "1"
ntest = "0.9"

[features]
config = ["directories", "toml"]
db = ["sled", "bincode", "mail-send", "tokio", "async-mutex", "jwt-simple"]
html = ["kuchiki", "lol_html", "html2md"]
rdf = ["rio_api", "rio_turtle"]
