[package]
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"
name = "plugin-example"
version = "0.0.1"

[build]
out-dir = "out"
target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
atomic-bindings = {path = "../bindings/rust-plugin"}
time = {version = "0.3", features = ["serde-human-readable"]}
