[package]
authors = ["you"]
build = "src/build.rs"
default-run = "atomic-server-tauri"
description = "Atomic Server"
edition = "2018"
license = ""
name = "atomic-server-tauri"
repository = ""
version = "0.29.0"
[build-dependencies]
[build-dependencies.tauri-build]
version = "1.0.0-beta.4"

[dependencies]
actix-rt = "2.4.0"
serde_json = "1.0"

[dependencies.atomic-server]
path = "../server"
version = "0.29.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tauri]
features = ["api-all", "system-tray"]
version = "1.0.0-beta.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
