[package]
authors = ["joep@ontola.io"]
build = "src/build.rs"
description = "Atomic Server - Tauri desktop"
edition = "2021"
license = "MIT"
name = "atomic-server-tauri"
repository = "https://github.com/joepio/atomic-data-rust"
version = "0.30.4"

[build-dependencies]
[build-dependencies.tauri-build]
version = "1.0.0-beta.4"

[dependencies]
actix-rt = "2.4.0"
serde_json = "1.0"

[dependencies.atomic-server]
# We don't need HTTPS for desktop usage
default-features = false
path = "../server"
version = "0.30.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tauri]
features = ["api-all", "system-tray"]
version = "1.0.0-beta.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
